alteraçoes de cartao

--- a/index.html
+++ b/index.html
@@ -20,6 +20,33 @@
                 </div>
             </div>
         </article>
+
+        <article class="cartao">
+            <div class="cartao_conteudo">
+                <h3>Programação</h3>
+                <div class="pergunta">
+                    O que é compilador?
+                </div>
+                <div class="resposta">
+                    É um programa que traduz codigos fonte escrito em uma linguaguem de programação de alto nivel 
+                    para codigo de maquina que o computador pode entender e executar
+                </div>
+            </div>
+        </article>
+
+        <article class="cartao">
+            <div class="cartao_conteudo">
+                <h3>Programação</h3>
+                <div class="pergunta">
+                    O que é programação orientada a objetos(POO)
+                </div>
+                <div class="resposta">
+                    POO é um paradigma de programação que organiza o código em objetos
+                    que são unidades que contêm dados (atributos) e comportamentos (métodos)
+                </div>
+            </div>
+        </article>
+
     </section>
    </main>
    <footer>
